--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
+    "element-ui": "^2.15.10",
     "marked": "^0.3.6",
     "prismjs": "^1.6.0",
     "vue": "^2.1.10"
@@ -22,7 +24,6 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
